--- a/vk.com_audio_sort.html
+++ b/vk.com_audio_sort.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="./src/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="./src/bootstrap/css/bootstrap-responsive.css"/>
 
-    <script src="http://vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
+    <script src="//vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
 
     <script src="./src/bootstrap/js/jquery.min.js"></script>
     <script type="text/javascript" src="./src/bootstrap/js/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="./src/audio.js"></script>
 
-    <script src="http://img.creara-media.ru/js/v3/cmblockvk.js"></script>
+    <script src="//img.creara-media.ru/js/v3/cmblockvk.js"></script>
 </head>
 <body>
 <div class="container-fluid">
